[package]
name = "vibecli"
version.workspace = true
description = "Terminal AI coding assistant with REPL, agent, and multi-provider support"
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
testing = []
# Enables the real whisper.cpp FFI backend (WhisperTranscriber). Off by
# default so the standard build doesn't require cmake + a C++ toolchain.
voice-whisper = ["dep:whisper-rs"]
# Enables the in-process mistral.rs inference backend (TurboQuant-aware KV
# cache). Off by default on Linux / Windows — mistralrs pulls candle 0.10.x
# transitively which adds ~2 minutes of cold compile. Turn on when you
# want the daemon's `/api/*` Ollama-compat surface to serve from the
# in-process model rather than reverse-proxying to `ollama serve`.
#
# On macOS this feature is effectively always-on: `build.rs` emits
# `cfg(mistralrs_enabled)` and the [target.'cfg(target_os = "macos")']
# block below pulls vibe-infer's Metal-accelerated path into every macOS
# build. Apple Silicon devs get the GPU codec without remembering a flag.
vibe-mistralrs = ["vibe-infer/mistralrs"]
vibe-mistralrs-cuda = ["vibe-mistralrs", "vibe-infer/mistralrs-cuda"]
vibe-mistralrs-metal = ["vibe-mistralrs", "vibe-infer/mistralrs-metal"]

# Slice 7d (RL-OS) — native Rust ONNX inference via the `ort` crate.
# When enabled, deployments with `runtime: onnx` serve through an
# in-process `OnnxRustRuntime` instead of spawning the Python
# `onnx_inference` sidecar. Saves the subprocess + Python interpreter
# at serve time; useful for edge / no-Python deploys.
#
# Off by default. The actual `ort` dep declaration is gated on
# resolving the smallvec conflict with mistralrs — see the ort comment
# above. Until then, this feature flag wires the routing in
# `RuntimePool::get_or_spawn` to prefer the in-process path when
# enabled; the in-process path returns a structured 'ort dep deferred'
# error to make the gap visible. When the feature is off (default),
# `runtime: onnx` transparently uses the Python sidecar
# (`onnx_inference.py`).
rl-ort = []

[lib]
name = "vibecli_cli"
path = "src/lib.rs"

[[bin]]
name = "vibecli"
path = "src/main.rs"

[dependencies]
vibe-core = { path = "../../vibeui/crates/vibe-core" }
vibe-ai = { path = "../../vibeui/crates/vibe-ai" }
syntect.workspace = true
tokio.workspace = true
clap.workspace = true
ratatui.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rustyline = { version = "14.0", features = ["derive"] }
dirs = "5.0"
futures = "0.3"
crossterm = { workspace = true, features = ["event-stream"] }
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
async-trait.workspace = true
thiserror = { workspace = true }
regex.workspace = true
reqwest = { workspace = true, features = ["multipart", "blocking"] }
bytes = "1"
urlencoding = "2.1"
axum.workspace = true
tower-http.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
tempfile = "3"
rand = "0.9"
walkdir = { workspace = true }
rusqlite = { workspace = true }
notify = { workspace = true }
serde_yaml = "0.9"
vibe-collab = { path = "../../vibeui/crates/vibe-collab" }
vibe-infer = { path = "../../vibeui/crates/vibe-infer" }
vibe-sandbox = { path = "../crates/vibe-sandbox" }
vibe-sandbox-native = { path = "../crates/vibe-sandbox-native" }
vibe-broker = { path = "../crates/vibe-broker" }
sha2.workspace = true
hmac.workspace = true
p256.workspace = true
hex.workspace = true
uuid.workspace = true
base64 = "0.22"
keyring = "2"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap_complete = "4"
zip = "2"
handlebars = "6"
socket2 = "0.5"
snow = "0.9"
libc = "0.2"
whisper-rs = { version = "0.13", optional = true }

# Slice 7d (RL-OS) — opt-in native Rust ONNX inference. The actual
# `ort` dep is intentionally NOT declared here yet: ort 2.0-rc.10 pins
# `smallvec=2.0.0-alpha.10`, which collides with mistralrs's smallvec
# requirement (≥ alpha.12). Resolving needs either a newer ort rc with
# the rc.10 API surface restored OR a workspace-level smallvec
# override. The `rl-ort` feature flag below stays in place so the
# infrastructure is ready; enabling it surfaces a structured 'feature
# wired but ort dep deferred — follow-up needed' error from
# `OnnxRustRuntime::load`. See docs/design/rl-os/06-deployment.md.

# OpenTelemetry (OTLP/HTTP export)
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"

# macOS: always pull in the Metal-accelerated mistral.rs backend. Cargo
# unifies feature flags across multiple declarations of the same dep, so
# this is additive on top of the workspace `vibe-infer` line above. Pair
# with the `mistralrs_enabled` cfg emitted by `build.rs`.
[target.'cfg(target_os = "macos")'.dependencies]
vibe-infer = { path = "../../vibeui/crates/vibe-infer", features = ["mistralrs", "mistralrs-metal"] }

[dev-dependencies]
tower.workspace = true
cucumber = { version = "0.20", features = ["macros"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

# US-001: real HTTP search backends for web grounding
[[test]]
name = "web_grounding_backend_bdd"
path = "tests/web_grounding_backend_bdd.rs"
harness = false

# US-002: real HTTP + SSE for A2A protocol
[[test]]
name = "a2a_http_bdd"
path = "tests/a2a_http_bdd.rs"
harness = false

# US-003: real git worktree pool against real git CLI
[[test]]
name = "worktree_git_bdd"
path = "tests/worktree_git_bdd.rs"
harness = false

# US-004: real MCP Streamable HTTP + OAuth 2.1 PKCE
[[test]]
name = "mcp_http_bdd"
path = "tests/mcp_http_bdd.rs"
harness = false

# US-005: real local voice I/O — model download + WAV parsing + Transcriber trait
[[test]]
name = "voice_whisper_bdd"
path = "tests/voice_whisper_bdd.rs"
harness = false

# US-006: real proactive scanner — walkdir + notify watcher
[[test]]
name = "proactive_scanner_bdd"
path = "tests/proactive_scanner_bdd.rs"
harness = false

# Claw-code parity BDD test harnesses — Wave 1
[[test]]
name = "workspace_fingerprint_bdd"
path = "tests/workspace_fingerprint_bdd.rs"
harness = false

[[test]]
name = "tool_pair_compaction_bdd"
path = "tests/tool_pair_compaction_bdd.rs"
harness = false

[[test]]
name = "session_health_probe_bdd"
path = "tests/session_health_probe_bdd.rs"
harness = false

# Claw-code parity BDD test harnesses — Wave 2
[[test]]
name = "bash_classifier_bdd"
path = "tests/bash_classifier_bdd.rs"
harness = false

[[test]]
name = "branch_lock_bdd"
path = "tests/branch_lock_bdd.rs"
harness = false

[[test]]
name = "worker_bootstrap_bdd"
path = "tests/worker_bootstrap_bdd.rs"
harness = false

[[test]]
name = "recovery_recipe_bdd"
path = "tests/recovery_recipe_bdd.rs"
harness = false

# Claw-code parity BDD test harnesses — Wave 3
[[test]]
name = "lane_events_bdd"
path = "tests/lane_events_bdd.rs"
harness = false

[[test]]
name = "quality_gates_bdd"
path = "tests/quality_gates_bdd.rs"
harness = false

[[test]]
name = "stale_branch_bdd"
path = "tests/stale_branch_bdd.rs"
harness = false

# Claw-code parity BDD test harnesses — Wave 4
[[test]]
name = "trust_resolution_bdd"
path = "tests/trust_resolution_bdd.rs"
harness = false

[[test]]
name = "config_layers_bdd"
path = "tests/config_layers_bdd.rs"
harness = false

[[test]]
name = "hook_abort_bdd"
path = "tests/hook_abort_bdd.rs"
harness = false

# Design platform BDD test harnesses — Pencil, Draw.io, Penpot, Diagram Gen, Design Hub
[[test]]
name = "design_providers_bdd"
path = "tests/design_providers_bdd.rs"
harness = false

[[test]]
name = "drawio_integration_bdd"
path = "tests/drawio_integration_bdd.rs"
harness = false

[[test]]
name = "pencil_integration_bdd"
path = "tests/pencil_integration_bdd.rs"
harness = false

[[test]]
name = "penpot_integration_bdd"
path = "tests/penpot_integration_bdd.rs"
harness = false

[[test]]
name = "diagram_generator_bdd"
path = "tests/diagram_generator_bdd.rs"
harness = false

[[test]]
name = "design_system_hub_bdd"
path = "tests/design_system_hub_bdd.rs"
harness = false

[[test]]
name = "reasoning_provider_bdd"
path = "tests/reasoning_provider_bdd.rs"
harness = false

[[test]]
name = "autodream_bdd"
path = "tests/autodream_bdd.rs"
harness = false

[[test]]
name = "session_fts_bdd"
path = "tests/session_fts_bdd.rs"
harness = false

[[test]]
name = "context_assembler_bdd"
path = "tests/context_assembler_bdd.rs"
harness = false

[[test]]
name = "memory_projections_bdd"
path = "tests/memory_projections_bdd.rs"
harness = false

[[test]]
name = "compressed_memory_bdd"
path = "tests/compressed_memory_bdd.rs"
harness = false

[[test]]
name = "embedding_engine_bdd"
path = "tests/embedding_engine_bdd.rs"
harness = false

[[test]]
name = "embedding_dim_migration_bdd"
path = "tests/embedding_dim_migration_bdd.rs"
harness = false

[[test]]
name = "compressed_memory_store_bdd"
path = "tests/compressed_memory_store_bdd.rs"
harness = false

[[test]]
name = "prompt_cache_bdd"
path = "tests/prompt_cache_bdd.rs"
harness = false

[[test]]
name = "alt_explore_bdd"
path = "tests/alt_explore_bdd.rs"
harness = false

[[test]]
name = "app_server_bdd"
path = "tests/app_server_bdd.rs"
harness = false

[[test]]
name = "computer_use_bdd"
path = "tests/computer_use_bdd.rs"
harness = false

[[test]]
name = "task_scheduler_bdd"
path = "tests/task_scheduler_bdd.rs"
harness = false

[[test]]
name = "plugin_bundle_bdd"
path = "tests/plugin_bundle_bdd.rs"
harness = false

[[test]]
name = "long_session_bdd"
path = "tests/long_session_bdd.rs"
harness = false

[[test]]
name = "sandbox_windows_bdd"
path = "tests/sandbox_windows_bdd.rs"
harness = false

[[test]]
name = "dispatch_remote_bdd"
path = "tests/dispatch_remote_bdd.rs"
harness = false

[[test]]
name = "focus_view_bdd"
path = "tests/focus_view_bdd.rs"
harness = false

[[test]]
name = "auto_approve_bdd"
path = "tests/auto_approve_bdd.rs"
harness = false

[[test]]
name = "sandbox_bwrap_bdd"
path = "tests/sandbox_bwrap_bdd.rs"
harness = false

[[test]]
name = "github_action_bdd"
path = "tests/github_action_bdd.rs"
harness = false

[[test]]
name = "mcp_tool_search_bdd"
path = "tests/mcp_tool_search_bdd.rs"
harness = false

[[test]]
name = "zdr_mode_bdd"
path = "tests/zdr_mode_bdd.rs"
harness = false

[[test]]
name = "tool_operations_bdd"
path = "tests/tool_operations_bdd.rs"
harness = false

# Pi-mono gap bridge BDD harnesses — Phases A1-D1
[[test]]
name = "session_tree_bdd"
path = "tests/session_tree_bdd.rs"
harness = false

[[test]]
name = "parallel_tools_bdd"
path = "tests/parallel_tools_bdd.rs"
harness = false

[[test]]
name = "oauth_login_bdd"
path = "tests/oauth_login_bdd.rs"
harness = false

[[test]]
name = "message_queue_bdd"
path = "tests/message_queue_bdd.rs"
harness = false

[[test]]
name = "job_manager_bdd"
path = "tests/job_manager_bdd.rs"
harness = false

[[test]]
name = "subprocess_dispatch_bdd"
path = "tests/subprocess_dispatch_bdd.rs"
harness = false

[[test]]
name = "context_handoff_bdd"
path = "tests/context_handoff_bdd.rs"
harness = false

[[test]]
name = "stream_tool_args_bdd"
path = "tests/stream_tool_args_bdd.rs"
harness = false

[[test]]
name = "dual_log_bdd"
path = "tests/dual_log_bdd.rs"
harness = false

[[test]]
name = "thinking_levels_bdd"
path = "tests/thinking_levels_bdd.rs"
harness = false

[[test]]
name = "tui_images_bdd"
path = "tests/tui_images_bdd.rs"
harness = false

[[test]]
name = "tui_ime_bdd"
path = "tests/tui_ime_bdd.rs"
harness = false

[[test]]
name = "session_share_bdd"
path = "tests/session_share_bdd.rs"
harness = false

[[test]]
name = "rpc_mode_bdd"
path = "tests/rpc_mode_bdd.rs"
harness = false

[[test]]
name = "paste_guard_bdd"
path = "tests/paste_guard_bdd.rs"
harness = false

[[test]]
name = "event_bus_bdd"
path = "tests/event_bus_bdd.rs"
harness = false

[[test]]
name = "pod_manager_bdd"
path = "tests/pod_manager_bdd.rs"
harness = false

# Apple Watch + Wear OS integration BDD harnesses
[[test]]
name = "watch_auth_bdd"
path = "tests/watch_auth_bdd.rs"
harness = false

[[test]]
name = "watch_session_relay_bdd"
path = "tests/watch_session_relay_bdd.rs"
harness = false

[[test]]
name = "watch_bridge_bdd"
path = "tests/watch_bridge_bdd.rs"
harness = false

[[test]]
name = "watch_p256_auth_bdd"
path = "tests/watch_p256_auth_bdd.rs"
harness = false

# Connectivity BDD harnesses — mDNS, ngrok, Tailscale
[[test]]
name = "mdns_announce_bdd"
path = "tests/mdns_announce_bdd.rs"
harness = false

[[test]]
name = "ngrok_bdd"
path = "tests/ngrok_bdd.rs"
harness = false

[[test]]
name = "tailscale_bdd"
path = "tests/tailscale_bdd.rs"
harness = false
