[package]
name = "vibecli-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
similar.workspace = true
git2.workspace = true
syntect.workspace = true
tracing.workspace = true
toml = "0.8"
dirs = "5.0"
futures = "0.3"
