[package]
name = "vibedesk"
version.workspace = true
description = "VibeDesk — task-first, conversation-driven companion app"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "vibedesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
# Embed the CLI crate to reach the encrypted ProfileStore directly (provider
# keys / config / UI prefs) — the same store VibeCoder uses, so settings carry over.
vibecli_cli = { package = "vibecli", path = "../../vibecli/vibecli-cli" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
