[package]
name = "vibe-ui"
version.workspace = true
description = "VibeUI - AI-Powered Code Editor"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibe_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["devtools"]
devtools = ["tauri/devtools"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
anyhow.workspace = true
lsp-types.workspace = true
walkdir.workspace = true
regex.workspace = true
reqwest.workspace = true
url.workspace = true
rand = "0.8"
dirs = "5"
futures = "0.3"
axum.workspace = true

# Local crates
vibe-core = { path = "../crates/vibe-core" }
vibe-lsp = { path = "../crates/vibe-lsp" }
vibe-ai = { path = "../crates/vibe-ai" }
vibe-extensions = { path = "../crates/vibe-extensions" }
vibe-collab = { path = "../crates/vibe-collab" }
vibecli_cli = { package = "vibecli", path = "../../vibecli/vibecli-cli" }
base64 = "0.22.1"
chrono = "0.4.44"
rusqlite = { version = "0.39", features = ["bundled"] }
chacha20poly1305 = "0.10"
hostname = "0.4"
sha2 = "0.10"
sysinfo = "0.31"

