[package]
name = "vibex"
version.workspace = true
description = "VibeX — task-first, conversation-driven companion app"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "vibex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
