[package]
name = "vibe-broker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Egress broker for VibeCody sandboxes — out-of-sandbox HTTP forward proxy with policy, credential injection, and audit. See docs/design/sandbox-tiers/02-egress-broker.md."

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
url = "2"
tracing = { workspace = true }
tokio = { workspace = true }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
webpki-roots = "0.26"
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { workspace = true }
rsa = { version = "0.9", features = ["sha2", "pem"] }
base64 = "0.22"
async-trait = { workspace = true }

[dev-dependencies]
cucumber = "0.21"
futures = "0.3"
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"

[[test]]
name = "broker_policy_bdd"
harness = false

[[test]]
name = "broker_ssrf_bdd"
harness = false

[[test]]
name = "broker_accept_bdd"
harness = false

[[test]]
name = "broker_forward_bdd"
harness = false

[[test]]
name = "broker_uds_bdd"
harness = false

[[test]]
name = "broker_tls_bdd"
harness = false

[[test]]
name = "broker_mitm_bdd"
harness = false

[[test]]
name = "broker_inject_bdd"
harness = false

[[test]]
name = "broker_sigv4_bdd"
harness = false

[[test]]
name = "broker_cloud_injection_bdd"
harness = false

[[test]]
name = "broker_imds_bdd"
harness = false

[[test]]
name = "broker_audit_bdd"
harness = false

[[test]]
name = "broker_audit_summary_bdd"
harness = false

[[test]]
name = "broker_token_mint_bdd"
harness = false
