[package]
name = "vibe-sandbox-firecracker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tier-3 (Firecracker microVM) Sandbox impl for VibeCody. Linux only; see docs/design/sandbox-tiers/03-firecracker-tier.md."

[dependencies]
vibe-sandbox = { path = "../vibe-sandbox" }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Real Firecracker process management lands in slice T3.1.B (next iteration).
# Listed but currently unused so the cfg-gated module compiles when wired.
nix = { version = "0.31", features = ["fs", "process", "signal", "socket"] }

[dev-dependencies]
tempfile = "3"
