[package]
name = "vibe-sandbox-native"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tier-0 (native, kernel-enforced) Sandbox impls for VibeCody. See docs/design/sandbox-tiers/01-native-tier.md."

[dependencies]
vibe-sandbox = { path = "../vibe-sandbox" }
thiserror = { workspace = true }

[dev-dependencies.vibe-broker]
path = "../vibe-broker"

[target.'cfg(target_os = "linux")'.dependencies]
# Wired in slice N1.x. Listed here so the cfg-gated module compiles cleanly.
nix = { version = "0.29", features = ["fs", "process", "user", "signal"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Wired in slice N3.x.

[dev-dependencies]
cucumber = "0.21"
tempfile = "3"
futures = "0.3"
tokio = { workspace = true, features = ["full"] }

[[test]]
name = "native_macos_bdd"
harness = false

[[test]]
name = "native_tier_bdd"
harness = false

[[test]]
name = "e2e_sandbox_broker_bdd"
harness = false
