[package]
name = "vibe-lsp"
version.workspace = true
description = "LSP client implementation for VibeCody editor"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
url.workspace = true

# JSON-RPC
jsonrpc-core = "18.0"

# Process management
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
