[package]
name = "vibe-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tracing.workspace = true

# Streaming support
futures = "0.3"
tokio-stream = "0.1"

# Environment variables
dotenvy = "0.15"

# Configuration
toml = "0.8"

# Tool call parsing
regex.workspace = true

# File walking for rules loader
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
