[package]
name = "vibe-ai"
version.workspace = true
description = "AI provider abstraction layer with 18 providers for VibeCody"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tracing.workspace = true

# Streaming support
futures = "0.3"
tokio-stream = "0.1"

# Environment variables
dotenvy = "0.15"

# Configuration
toml = "0.8"

# Tool call parsing
regex.workspace = true

# File walking for rules loader
walkdir.workspace = true

# AWS SigV4 signing (Bedrock)
sha2.workspace = true
hmac.workspace = true
hex.workspace = true

[features]
testing = []

[dev-dependencies]
tempfile = "3"
cucumber = { version = "0.20", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[[test]]
name = "rules_matching_bdd"
path = "tests/rules_matching_bdd.rs"
harness = false

[[test]]
name = "agent_spawn_bdd"
path = "tests/agent_spawn_bdd.rs"
harness = false

[[test]]
name = "circuit_breaker_bdd"
path = "tests/circuit_breaker_bdd.rs"
harness = false

[[test]]
name = "failover_bdd"
path = "tests/failover_bdd.rs"
harness = false

[[test]]
name = "mock_provider_bdd"
path = "tests/mock_provider_bdd.rs"
harness = false
